add links to Antir and Wyewoo

--- a/Site/includes/footer.html
+++ b/Site/includes/footer.html
@@ -9,9 +9,10 @@
           </h5>
           
         </div>
-		<h5 class="white-text darken-3-text">
-            12th Night 51 is Hosted by <a class="blue-text text-lighten-4" href="http://www.wyewood.org/wp/">Barony of Wyewood</a>
-          </h5>
+		<div class="col l6 s12 m6">
+		<p class="white-text darken-3-text right-align">
+           <a href="http://www.antir.sca.org/Upcoming/" class="blue-text text-lighten-4">AnTir's </a>12th Night 51 is Hosted by <a class="blue-text text-lighten-4" href="http://www.wyewood.org/wp/">Barony of Wyewood</a>
+          </p>
           
         </div>
         
