Update information from Liaden

--- a/Site/includes/header.html
+++ b/Site/includes/header.html
@@ -1,8 +1,8 @@
 
 
   <nav class="grey darken-4" role="navigation">
-    <div class="nav-wrapper container"><a id="logo-container" href="http://www.antir.sca.org/Upcoming/" class="brand-logo">An Tir</a>
-      <ul class="right hide-on-med-and-down">
+    <div class="nav-wrapper container">
+      <ul class="left hide-on-med-and-down">
         <li><a href="index.html">12TH NIGHT </a></li>
         <li><a href="QRT.html">QUEEN'S RAPIER CHAMPIONSHIP </a></li>
         <li><a href="schedule.html">SCHEDULE </a></li>
@@ -12,7 +12,7 @@
       
       </ul>
 
-      <ul id="nav-mobile" class="side-nav">
+      <ul id="nav-mobile">
         <li><a href="index.html">12TH NIGHT </a></li>
         <li><a href="QRT.html">QUEEN'S RAPIER CHAMPIONSHIP </a></li>
         <li><a href="schedule.html">SCHEDULE </a></li>
