Fixed some menues and styles

--- a/Site/includes/footer.html
+++ b/Site/includes/footer.html
@@ -1,3 +1,7 @@
+<script>
+ $(".button-collapse").sideNav();
+ $(".dropdown-button").dropdown();
+ </script>
 <footer class="page-footer red accent-4">
     <div class="container">
       <div class="row">
