--- a/Site/includes/header.html
+++ b/Site/includes/header.html
@@ -1,26 +1,46 @@
 
-
-  <nav class="grey darken-4" role="navigation">
-    <div class="nav-wrapper container">
-      <ul class="left hide-on-med-and-down">
-        <li><a href="index.html">12TH NIGHT </a></li>
-        <li><a href="QRT.html">QUEEN'S RAPIER CHAMPIONSHIP </a></li>
-        <li><a href="schedule.html">SCHEDULE </a></li>
+  
+    <nav class="grey darken-4" role="navigation">
+    <!-- Dropdown Structure -->
+      <ul id="dropdown1" class="dropdown-content">
+        <li><a href="entertainment.html">KNIGHT'S AUCTION </a></li>
+        <li><a href="QRT.html">RAPIER</a></li>
+        <li><a href="dirtydozen.html">DIRTY DOZEN</a></li>
+        <li><a href="activities.html">OTHER ACTIVITIES </a></li>
+      </ul>
+    <div class="nav-wrapper container ">
+    
+      <ul class="right hide-on-med-and-down">
+        <li><a href="index.html">HOME </a></li>
+        <li><a href="location.html">SITE </a></li>
+        <li><a href="event-staff.html">STAFF </a></li>
+        <li><a href="volunteers.html">VOLUNTEER </a></li>
         <li><a href="merchants.html">MERCHANTS </a></li>
-        <li><a href="activities.html">ACTIVITIES </a></li>
-        <li><a href="entertainment.html">ENTERTAINMENT </a></li>
-      
-      </ul>
-
-      <ul id="nav-mobile">
-        <li><a href="index.html">12TH NIGHT </a></li>
-        <li><a href="QRT.html">QUEEN'S RAPIER CHAMPIONSHIP </a></li>
         <li><a href="schedule.html">SCHEDULE </a></li>
-        <li><a href="merchant.html">MERCHANTS </a></li>
-        <li><a href="activities.html">ACTIVITIES </a></li>
-        <li><a href="entertainment.html">ENTERTAINMENT </a></li>
+        <li><a class="dropdown-button" href="#!" data-activates="dropdown1">ACTIVITIES<i class="material-icons right">arrow_drop_down</i></a></li>
+    </ul>
+        
       
-      </ul>
-      <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
+ 
+
+      <ul id="nav-mobile" class="side-nav">
+        <li><a href="index.html">HOME</a></li>
+        
+        
+        
+        <li><a href="location.html">SITE INFO</a></li>
+        <li><a href="event-staff.html">EVENT STAFF </a></li>
+        <li><a href="volunteers.html">VOLUNTEERS </a></li>
+        <li><a href="merchant.html">MERCHANTS </a></li>
+        <li><a href="schedule.html">SCHEDULE </a></li>
+        
+        <li><a href="activities.html">ACTIVITIES </a></li>
+        <li><a href="entertainment.html">KNIGHT'S AUCTION </a></li>
+        <li><a href="QRT.html">QUEEN'S RAPIER </a></li>
+        <li><a href="dirtydozen.html">DIRTY DOZEN</a></li>
+      
+    </ul>
+       <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a><span class="hide-on-large-only">MENU</a>
+    
     </div>
   </nav>
