--- a/Site/includes/footer.html
+++ b/Site/includes/footer.html
@@ -4,29 +4,26 @@
  </script>
 <footer class="page-footer red accent-4">
     <div class="container">
-      <div class="row">
-        <div class="col l6 s12 m6">
-          <h5 class="blue-grey-text darken-3-text">
-            <a href="https://resweb.passkey.com/Resweb.do?mode=welcome_ei_new&eventID=14550545" class="white-text">
-              Click here for Hotel Reservation
-            </a>
-          </h5>
-          
-        </div>
-		<div class="col l6 s12 m6">
-		<p class="white-text darken-3-text right-align">
-           <a href="http://www.antir.sca.org/Upcoming/" class="blue-text text-lighten-4">AnTir's </a>12th Night 51 is Hosted by <a class="blue-text text-lighten-4" href="http://www.wyewood.org/wp/">Barony of Wyewood</a>
-          </p>
-          
-        </div>
+      
+		
         
         
-      </div>
+      
     </div>
     <div class="footer-copyright">
+	
       <div class="container">
-      Made by <a class="orange-text text-lighten-3" href="http://materializecss.com">Materialize</a>
-	 
+		  <div class="row">
+			 <div class="col l6 s12 m6">
+				 <p class="white-text darken-3-text right-align">
+				   <a href="http://www.antir.sca.org/Upcoming/" class="blue-text text-lighten-4">AnTir </a>'s 12th Night 51 is Hosted by <a class="blue-text text-lighten-4" href="http://www.wyewood.org/wp/">Barony of Wyewood</a>
+				  </p>
+				  
+			</div>
+			<div class="col l6 s12 m6">
+				Built using <a class="orange-text text-lighten-3" href="http://materializecss.com">Materialize</a>
+			</div>
+		 </div>
       </div>
     </div>
   </footer>
