--- a/Site/includes/footer.html
+++ b/Site/includes/footer.html
@@ -14,13 +14,13 @@
 	
       <div class="container">
 		  <div class="row">
-			 <div class="col l6 s12 m6">
-				 <p class="white-text darken-3-text right-align">
-				   <a href="http://www.antir.sca.org/Upcoming/" class="blue-text text-lighten-4">AnTir </a>'s 12th Night 51 is Hosted by <a class="blue-text text-lighten-4" href="http://www.wyewood.org/wp/">Barony of Wyewood</a>
-				  </p>
+			 <div class="col l6 s12 m6 left-align white-text darken-3-text">
+				 
+				   <a href="http://www.antir.sca.org/Upcoming/" class="orange-text text-lighten-3">AnTir </a>'s 12th Night 51 is Hosted by <a class="orange-text text-lighten-3" href="http://www.wyewood.org/wp/">Barony of Wyewood</a>
+				
 				  
 			</div>
-			<div class="col l6 s12 m6">
+			<div class="col l6 s12 m6 right-align">
 				Built using <a class="orange-text text-lighten-3" href="http://materializecss.com">Materialize</a>
 			</div>
 		 </div>
